# cmdh

./: Makefile  README.md  pyproject.toml
.githooks/: pre-commit
cmdh/: llm_server.py  main.py  vector_store.py
cmdh/libs/: consts.py  llm_server.py  vector_store.py
