[tool.poetry]
name = "cmdh"
version = "0.1.0"
description = ""
authors = ["Roee Shapira <ro33.sha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.8"
langchain-community = "^0.0.21"
langchain-core = "^0.1.25"
gpt4all = "^2.2.1.post1"
chromadb = "^0.4.23"
gitpython = "^3.1.42"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.2.0"

[tool.poetry.scripts]
start = "cmdh.main:main"
train = "cmdh.vector_store:init_vector_store"

[tool.pyright]
venvPath = "/Users/roee/Library/Caches/pypoetry/virtualenvs/cmdh-o7oLoMPX-py3.12"
venv = "cmdh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
